--- a/jenkins_agents/docker-compose.yml
+++ b/jenkins_agents/docker-compose.yml
@@ -2,14 +2,15 @@ version: "3.8"
 
 services:
   jenkins-master:
-    image: jenkins/jenkins:lts
+    build:
+      context: .
+      dockerfile: Dockerfile.jenkins
     container_name: jenkins-master
     ports:
       - "8080:8080"
       - "50000:50000" # For JNLP agent connections
     volumes:
-      - jenkins_home:/var/jenkins_home
+      - ./jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
-volumes:
-  jenkins_home:
