--- a/jenkins_agents/Dockerfile.jenkins
+++ b/jenkins_agents/Dockerfile.jenkins
@@ -2,6 +2,14 @@ FROM jenkins/jenkins:lts
 
 USER root
 
+# Install Docker CLI
+RUN apt-get update && \
+    apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common && \
+    curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
+    add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
+    apt-get update && \
+    apt-get install -y docker-ce-cli
+
 # Install Node.js and npm (using NodeSource for latest LTS)
 RUN apt-get update && \
     apt-get install -y curl && \
