--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "src/app.js",
     "start": "node src/app.js",
+    "test": "echo \"no test specified\"",
     "dependencies": {
         "express": "^4.18.2"
     }
