add jenkins to user group 20 for docker socket

--- a/jenkins_agents/Dockerfile.jenkins
+++ b/jenkins_agents/Dockerfile.jenkins
@@ -3,13 +3,15 @@ FROM jenkins/jenkins:lts
 USER root
 
 # Install Docker CLI
-RUN apt-get update && \
-    apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
-    add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
-    apt-get update && \
-    apt-get install -y docker-ce-cli
-
+RUN apt-get update && apt-get install -y lsb-release ca-certificates curl && \
+    install -m 0755 -d /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc && \
+    chmod a+r /etc/apt/keyrings/docker.asc && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] \
+    https://download.docker.com/linux/debian $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable" \
+    | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    apt-get update && apt-get install -y docker-ce-cli && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 # Install Node.js and npm (using NodeSource for latest LTS)
 RUN apt-get update && \
     apt-get install -y curl && \
@@ -17,4 +19,7 @@ RUN apt-get update && \
     apt-get install -y nodejs && \
     apt-get clean
 
+
+# Add jenkins user to group 20 (staff) directly, regardless of group name
+RUN usermod -aG 20 jenkins
 USER jenkins
