use root user to run the jenkins container

--- a/jenkins_agents/Dockerfile.jenkins
+++ b/jenkins_agents/Dockerfile.jenkins
@@ -21,5 +21,5 @@ RUN apt-get update && \
 
 
 # Add jenkins user to group 20 (staff) directly, regardless of group name
-RUN usermod -aG 20 jenkins
-USER jenkins
+# RUN usermod -aG 1000 jenkins
+# USER jenkins
