--- a/jenkins_agents/docker-compose.yml
+++ b/jenkins_agents/docker-compose.yml
@@ -11,6 +11,6 @@ services:
       - "50000:50000" # For JNLP agent connections
     volumes:
       - ./jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ${DOCKER_SOCKET_PATH}:/var/run/docker.sock
     restart: unless-stopped
 
