--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "main": "src/app.js",
     "scripts": {
         "start": "node src/app.js",
-        "test": "echo \"no test specified\""
+        "test": "echo \"no test specified\"",
+        "lint": "echo \" Eslint to be configured \""
     },
     "dependencies": {
         "express": "^4.18.2"
